--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,8 @@ language: go
 
 go:
   - "1.11"
-  - "1.10"
 
 before_install:
-  - go get -u github.com/golang/dep/cmd/dep
-  - dep ensure
+  - GO111MODULE=on go mod vendor
 
 script: go test
